# Deep-point-cloud-completion

./: readme.md
align-test/: CMakeLists.txt  readme.md  rs-align-test.cpp
experiment/point_clouds/pc_with_completion/: point_cloud1.pcd  point_cloud2.pcd  point_cloud3.pcd  point_cloud4.pcd  point_cloud5.pcd  point_cloud6.pcd  point_cloud7.pcd  point_cloud8.pcd  show.m
experiment/point_clouds/pc_wo_completion/: point_cloud1.pcd  point_cloud2.pcd  point_cloud3.pcd  point_cloud4.pcd  point_cloud5.pcd  point_cloud6.pcd  point_cloud7.pcd  point_cloud8.pcd
png2pcd_batch/: README.md  png2pcd_batch.cpp
rs_bag2image/: main.cpp  realsense.cpp  realsense.h
